some fixes for german-law-website
- support grundgesetz
- find end of paragraph correctly (stop at heading with same or higher
level)
- show scrollbar everytime (constant width)
- further minor fixes

--- a/laws/style.css
+++ b/laws/style.css
@@ -5,6 +5,9 @@ html, body {
     color: #eee;
     text-align: left;
 }
+html {
+    height: 101%; /* show scrollbar even if not necessary -> constant width of content */
+}
 * {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
